ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: argocd.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/argocd"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
    - host: apps-web.oopscraft.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: apps-web
                port:
                  number: 10000
